Introduce entities, DTOs, repositories, and controllers for core hiking platform functionality